# 30122-notes

./: README.md
examples/ex01.venv/: README.md  example.py
examples/ex02.poetry/: README.md
examples/ex04.import-example/: import_example.py
examples/ex05.http-demo/: README.md  get.sh  runserver.sh
examples/ex06.create-fec-db/: candidate.csv  contributions.csv  create-fec.sql  fec.db
examples/ex07.string-manipulation/: string-manipulation.ipynb
examples/ex08.cli-tools/: course-ideas.txt  course_names.txt  courses.sh  courses.txt  example.py  example.sh  file.txt  numbers.txt  search-courses.sh  spongebob.py  three-times.rb
labs/graphs/: README.md  graphs_lab.ipynb  pyproject.toml
labs/graphs/congress_network/: README.txt  compute_vc.py  histogram_weights.py  viral_centrality.py
labs/installation/: README.md
labs/m2-scraping/: README.md  pyproject.toml
labs/m2-scraping/data/: ilga.html
labs/m2-scraping/m2lab/: fec.py  ilga.py  npr.py
labs/m2-scraping/m2lab/soln/: fec.py  ilga.py  npr.py
labs/m2-scraping/soln/: mastodon.py
labs/m3-sql/: README.md  legislators.db  make_database.py  pyproject.toml  solutions.md
labs/m4-regex/: README.md  pyproject.toml  regex_lab.ipynb
notebooks/: L02.python-data-model.ipynb
notes/: L03.hashtables.ipynb  L05.databases.md  L06.regex.ipynb  L07.record-linkage.ipynb  L08.visualization.ipynb  L09.automation.md  L11.data-structures.ipynb  L12-graphs.ipynb  intermediate-python.ipynb  pyproject.toml  testing.md
notes/L04/: L04.gathering-parsing-data.ipynb  L04.gathering-parsing-data.qmd  file.data  output.json
(+3 files in other folders)
